Bug #315841 don't flush frames in order to ensure that plugins are instantiated. also, don't flush when inside of ObjectURIChanged r+sr=bz